some images not loading

--- a/browser/scss/pdesigns.scss
+++ b/browser/scss/pdesigns.scss
@@ -62,7 +62,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/pdesigns.homepage.png');
+			background-image: url('/images/pdesigns.homepage.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -74,7 +74,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/etsy.png');
+			background-image: url('/images/etsy.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -86,7 +86,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/amazon.png');
+			background-image: url('/images/amazon.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -97,7 +97,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/houzz.png');
+			background-image: url('/images/houzz.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
