--- a/browser/scss/pdesigns.scss
+++ b/browser/scss/pdesigns.scss
@@ -28,7 +28,7 @@
 			vertical-align: top;
 			height: 300px;
 			width: 50%;
-			background-image: url('images/a.proto.2.jpg');
+			background-image: url('images/a.proto.2.JPG');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -74,7 +74,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/etsy.png');
+			background-image: url('images/Etsy.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -86,7 +86,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/amazon.png');
+			background-image: url('images/Amazon.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
@@ -97,7 +97,7 @@
 			vertical-align: top;
 			height: 200px;
 			width: 50%;
-			background-image: url('images/houzz.png');
+			background-image: url('images/Houzz.png');
 		  	background-repeat: no-repeat;
 		  	background-size: cover;
 		  	background-position: center;
