--- a/browser/scss/home.scss
+++ b/browser/scss/home.scss
@@ -5,7 +5,7 @@ home .home-image {
 	height: 400px;
 	background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('images/background2.jpg');
   	background-repeat: no-repeat;
-  	background-size: 100% 100%;
+  	background-size: cover;
   	background-attachment: fixed;
   	z-index: -1;
 
