--- a/browser/scss/home.scss
+++ b/browser/scss/home.scss
@@ -17,10 +17,19 @@
 	z-index: 200;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
 	.home-image {
 		background-size: contain;
 	}
+}
+
+@media only screen and (max-width: 525px) and (min-width: 400px) {
+	.home-intro {
+		margin-top: 170px;
+	}
+}
+
+@media only screen and (max-width: 400px) {
 	.home-intro {
 		margin-top: 120px;
 	}
